as per submission grading, i have made the following amendments; corrected a fault with one of my selectors from section content.p to section p, added double spacing between each selector rather than single lines for improved readability, reassigned footer h4 to footer h3 to follow on from previous elements within my page, ensured that whole page uses kebab-case for naming conventions except for when the class or ID is only 1 word in length, added thorough explanaitions to my CSS file for ease of understanding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,14 @@
     margin: 0;
 }
 
+
 /* color background for the entire page */
 body {
     background-color: #d9dcd6;
 }
 
+
+/* selector targeting the header element at the top of the page, including the nav bar and company name */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -17,15 +20,21 @@ header {
     color: #ffffff;
 }
 
+
+/* selector targeting the lettering in the company name */
 header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+
+/* Selector targeting the letters SEO within the page title */
 header h1 .seo {
     color: #d9dcd6;
 }
 
+
+/* selector targeting the nav in the header */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -34,25 +43,33 @@ header nav {
     font-size: 20px;
 }
 
+
+/* selector targeting all ul elements within the nav bar */
 header nav ul {
     list-style-type: none;
 }
 
+
+/* selector targeting all li elements within the nav bar */
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+
+
 /* nav bar link color */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+
 /* nav bar hover color change functionality (after MVP product completed) */
 nav ul li a:hover{
     color: black;
     font-weight: 400;
 }
+
 
 /* Background image - alt text not required for the image as it will have no impact to the page should this fail to load*/
 div.hero {
@@ -65,30 +82,36 @@ div.hero {
     background-position: center;
 }
 
+
 /* content paragraph font size */
-section content.p {
+section p {
     font-size: 16px;
 }
 
-/* section article class */
+
+/* selector targeting the images within the body of the main content of the page, top and bottom one float to the left */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/* section article class */
+
+/* selector targeting the images within the body of the main content of the page top, middle image floats to the right */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-/* section article background color block */
+
+/* selector targeting the main content in the middle left of the page. This needs to be left in so that the aside element doesn't get shoved down */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+
+/*  */
 section article {
     margin-bottom: 20px;
     padding: 50px;
@@ -98,14 +121,18 @@ section article {
     color: #ffffff;
 }
 
+
+/* selector targeting the images within the middle left of the page */
 section article img {
     max-height: 200px;
 }
 
+/* selector targeting the h2 elements within the middle left of the page */
 section article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
 
 /* aside class */
 aside {
@@ -121,22 +148,30 @@ aside {
     color: #ffffff;
 }
 
+
+/* selector targeting the aside artile elements */
 aside article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+
+/* selector targeting the h3 title elements within the aside element */
 aside article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+
+/* selector for aside article images */
 aside article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+
+/* selector for the footer */
 footer {
     padding: 30px;
     clear: both;
@@ -144,7 +179,8 @@ footer {
     text-align: center;
 }
 
+
 /* font in footer element in index file scaled down to h4 from sourcecode then scaled up within css file */
-footer h4 {
+footer h3 {
     font-size: 20px;
 }
